# Rhai-Runtime

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
doc/: RHAI_RUNTIME.md
examples/: build.rhai  deploy.rhai  http_fetch.rhai
proj/: FIXES  PROJECT  RULES  TODO
src/: main.rs
src/api/: env.rs  fs.rs  http.rs  mod.rs  shell.rs
src/state/: mod.rs  paths.rs  sizes.rs
std/: log.rhai  path.rhai
